@@ -1,4 +1,9 @@
 2008-12-23  Helmut Eller  <heller@common-lisp.net>
+
+	* inferior-slime.el (inferior-slime-hook-function): New function.
+	(inferior-slime-init): Automatically enable it in the
+	*inferior-lisp* buffer.
+
 2008-12-23  Helmut Eller  <heller@common-lisp.net>
 
 	* slime-fancy.el: Add slime-repl.
